--- a/L17_bigmodel_asr/platformio.ini
+++ b/L17_bigmodel_asr/platformio.ini
@@ -16,8 +16,8 @@ board_build.arduino.memory_type = qio_opi
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 build_flags =
-    -D DEBUG_ESP_PORT=Serial
-    -D CORE_DEBUG_LEVEL=4
+;    -D DEBUG_ESP_PORT=Serial
+    -D CORE_DEBUG_LEVEL=3
     -D BOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
 lib_deps =
