--- a/L23_lvgl_driver_screen/platformio.ini
+++ b/L23_lvgl_driver_screen/platformio.ini
@@ -13,15 +13,26 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.arduino.memory_type = qio_opi
-board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
-monitor_speed = 115200
 build_flags =
-;websocket开启串口debug日志
-    -D DEBUG_ESP_PORT=Serial
-    -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-;    -D BOARD_HAS_PSRAM
-;    -mfix-esp32-psram-cache-issue
+    -D BOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+    -D USER_SETUP_LOADED
+    -D ST7789_DRIVER
+    -D TFT_RGB_ORDER=TFT_BGR
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=320
+    -D TFT_INVERSION_OFF
+    -D TFT_BL=8
+    -D TFT_BACKLIGHT_ON=HIGH
+    -D TFT_MISO=-1
+    -D TFT_MOSI=17
+    -D TFT_SCLK=16
+    -D TFT_CS=5
+    -D TFT_DC=7
+    -D TFT_RST=6
+    -D USE_HSPI_PORT
+    -I include
 lib_deps =
-    links2004/WebSockets @ ^2.6.1
-    bblanchon/ArduinoJson@^7.3.0
+    bodmer/TFT_eSPI @ ^2.5.43
+    lvgl/lvgl @ ^9.3.0
