--- a/L21_voice_chat/platformio.ini
+++ b/L21_voice_chat/platformio.ini
@@ -16,7 +16,7 @@ board_build.arduino.memory_type = qio_opi
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 build_flags =
-    -D DEBUG_ESP_PORT=Serial
+;    -D DEBUG_ESP_PORT=Serial
     -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
     -D BOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
