--- a/L65_lvgl_thread_safety/platformio.ini
+++ b/L65_lvgl_thread_safety/platformio.ini
@@ -14,6 +14,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 board_build.arduino.memory_type = qio_opi
 board_upload.flash_size = 16MB
+monitor_speed = 115200
 build_flags =
     -D BOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
